# elo-agi

./: .dockerignore  .gitignore  BENCHMARKS.md  BRAND.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCTION_REFACTOR.md  README.md  SECURITY.md  crush.py  elo.py  elo_chat.py  fly.toml  neuro_chat.py  pyproject.toml  test_cli.py  train.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  security.yml  test.yml
api/: main.py  requirements.txt  sandbox.py
demos/agi_integration/: __init__.py  agent.py  run_demo.py  scenario_arc.py  scenario_continual.py
docs/: CNAME  api-docs.html  demo.html  features.html  getting-started.html  index.html  install.sh  main.js  pricing.html  privacy.html  robots.txt  sitemap.xml  styles.css  terms.html
elo_cli/: __init__.py  agent.py  permissions.py  project.py  sessions.py
elo_cli/tools/: base.py  bash_tool.py  file_tools.py  search_tools.py
examples/: basic_usage.py  brain_api.py  langchain_integration.py  research_assistant_demo.py
neuro/: __init__.py  active_learning.py  autonomous.py  benchmark.py  benchmarks.py  brain.py  cli.py  cli_v2.py  demo.py  demos.py  editor.py  embodied.py  emotions.py  engine.py  engine_v2.py  executor.py  git.py  git_tools.py  jupyter.py  mcp.py  memory.py  ocr.py  patterns.py  self_evolution.py  self_training.py  sleep.py  social.py  stream.py  tools.py  tools_unrestricted.py  wrapper.py
neuro-abstract/: .gitignore  README.md
neuro-abstract/src/: __init__.py  abstraction_engine.py  program_synthesis.py  symbolic_binder.py
neuro-abstract/tests/: __init__.py  test_binder.py  test_integration.py  test_synthesis.py  test_types.py
neuro-bench/: .gitignore
neuro-bench/src/: __init__.py  causal_bench.py  consolidation_bench.py  planning_bench.py  reasoning_bench.py  robustness_bench.py  runner.py
neuro-bench/tests/: __init__.py  test_bench.py  test_new_benchmarks.py
neuro-causal/: README.md
neuro-causal/src/: causal_discovery.py  causal_representation.py  counterfactual.py  inference_adapter.py
neuro-causal/tests/: __init__.py  test_counterfactual.py  test_differentiable_scm.py  test_discovery.py  test_integration.py
neuro-continual/: README.md
neuro-continual/src/: __init__.py  capability_tracking.py  forgetting_prevention.py  task_inference.py
neuro-continual/tests/: test_capability_tracking.py  test_experience_replay.py  test_forgetting_prevention.py  test_integration.py  test_selective_consolidation.py  test_task_inference.py
neuro-credit/: .gitignore  README.md
neuro-credit/src/: __init__.py  contribution_accounting.py  eligibility_traces.py  policy_gradient.py
neuro-credit/tests/: __init__.py  test_blame_assignment.py  test_contribution_accounting.py  test_eligibility_traces.py  test_integration.py  test_policy_gradient.py  test_surprise_modulation.py
neuro-env/src/: __init__.py  curriculum.py  dialogue_env.py  experience_buffer.py  gym_adapter.py  text_world.py
neuro-env/tests/: __init__.py  test_env.py
neuro-ground/: CLAUDE.md
neuro-ground/src/: __init__.py  calibration.py  sim2real.py
neuro-ground/tests/: __init__.py  test_ground.py
neuro-inference/: .gitignore
neuro-inference/src/: integration.py
neuro-integrate/: .gitignore
neuro-meta-reasoning/: README.md
neuro-module-00-integration/: .gitignore
neuro-module-01-predictive-coding/: .gitignore  README.md
neuro-module-03-reasoning-types/: .gitignore
neuro-module-04-memory/: .gitignore  stress_test.py
neuro-module-05-sleep-consolidation/: README.md
neuro-module-06-motivation/: README.md
neuro-module-07-emotions-decisions/: .gitignore
neuro-module-10-spatial-cognition/: .gitignore  stress_test.py
neuro-module-11-time-perception/: .gitignore  README.md
neuro-module-16-consciousness/: .gitignore
neuro-planning/: README.md
neuro-robust/: .gitignore  README.md
neuro-scale/: .gitignore
neuro-system/: .gitignore
neuro-transfer/: .gitignore
neuro_cli/: __init__.py  agent.py  project.py
results/: analogy_solving_1771713513.json  analogy_solving_1771714097.json  episodic_recall_1771713513.json  episodic_recall_1771714097.json  goal_achievement_1771713513.json  goal_achievement_1771714097.json  instruction_following_1771713513.json  instruction_following_1771714097.json  logical_inference_1771713513.json  logical_inference_1771714097.json  multi_step_planning_1771713513.json  multi_step_planning_1771714097.json  pattern_completion_1771713513.json  pattern_completion_1771714097.json  question_answering_1771713513.json  question_answering_1771714097.json  sequence_memory_1771713513.json  sequence_memory_1771714097.json  text_completion_1771713513.json  text_completion_1771714097.json  working_memory_1771713513.json  working_memory_1771714097.json
scripts/: record_demo.sh
tests/: test_engine_v2.py
(+669 files in other folders)
